--- a/site-lucas-sassa/custom.css
+++ b/site-lucas-sassa/custom.css
@@ -52,6 +52,11 @@ h1 {
     color: #FFF;
     padding: 2rem 0 1rem;
 }
+#principal-sobre {
+    background-color: #4301bc;
+    color: #FFF;
+    padding: 10rem 0 8rem;
+}
 h3{
     font-size: 1.7rem;
     color: #FFF;
